# icloudds

./: .ignore-icloud.txt  .ignore-regexes.txt  .include-icloud.txt  .include-local.txt  .include-regexes.txt  Dockerfile  Dockerfile.local  README.md  logging-config.json  pyproject.toml  requirements.txt
scripts/: build.all.sh  build.docker.local  build.docker.local.sh  build.docker.repo.sh  build.install  build.install.sh  build.local  build.local.sh  build.sh  build_docker  build_docker.local  build_docker.repo  install  install.sh
src/: constants.py  context.py  icloudds.py
src/event/: event_handler.py  icloud_event.py
src/icloud/: authenticate.py
src/logger/: logger.py
src/model/: ActionResult.py  BaseTree.py  FileInfo.py  LocalTree.py  action_result.py  base_tree.py  file_info.py  iCloudTree.py  icloud_tree.py  local_tree.py  thread_safe.py
