[project]
name = "icloudds"
version = "1.0.5"
description = "icloudds is a command-line tool to bi-directionally synchronize your iCloud Drive to a local folder"
authors = [{ name = "Gordon Aspin", email = "gordon.aspin@gmail.com" }]
dependencies = [
    "click==8.3.1",
    "pyicloud @ git+https://github.com/timlaing/pyicloud.git@673c1aa30572bac2849be099b5d5d10cf78c1613",
    "watchdog==6.0.0",
    "timeloop-ng==1.0.0",
]
requires-python = ">=3.14.2"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Gordon Aspin", email="gordon.aspin@gmail.com" }]
classifiers=[
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
]
[project.scripts]
icloudds = "icloudds:main"

[project.urls]
Repository = "https://github.com/gordonaspin/icloudds"

[tool.setuptools]
